syntax = "proto3";
option go_package="/internal/proto";
package proto;
import "google/protobuf/empty.proto";

message Location{
  string Type = 1;
  repeated double Coordinates = 2 [packed=true];
}

message LocationObject{
  string Id = 1;
  Location location = 2;
}

message LocationQueryObject{
  int32 radius = 1;
  double latitude = 2;
  double longitude = 3;
}

message EventsLists{
  repeated LocationObject events = 1;
}

message EventId{
  string Id = 1;
}


service LocationDataService{
  rpc LocationData(LocationObject) returns  (google.protobuf.Empty);
  rpc FindEventsWithin(LocationQueryObject) returns (EventsLists);
  rpc DeleteEvent(EventId) returns (google.protobuf.Empty);
}